--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
       href="https://fonts.googleapis.com/css2?family=Arial:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Domaine Display:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <style>
       * {
         padding: 0;
         margin: 0;
-        font-family: 'Roboto', sans-serif;
+        font-family: Macan,  'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
       }
     </style>
     <title>React App</title>
